<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chapter_notes"
        android:icon="@drawable/ic_note"
        android:title="@string/notes_chapter_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share_progress"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_edit_chapter" android:title="@string/chapter_edit" app:showAsAction="never" />
    <item android:id="@+id/action_mark_all" android:title="@string/chapter_mark_all_done" app:showAsAction="never" />
    <item android:id="@+id/action_reset_progress" android:title="@string/chapter_reset_progress" app:showAsAction="never" />
    <item android:id="@+id/action_delete_chapter" android:title="@string/action_delete" app:showAsAction="never" />
</menu>
