<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_xl"
        android:paddingEnd="@dimen/space_xl"
        android:paddingBottom="@dimen/space_2xl">

        <View
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_md"
            android:layout_marginBottom="@dimen/space_md"
            android:background="@drawable/bg_bottom_sheet_handle"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textAppearance="@style/TextAppearance.SessionTracks.TitleLarge" />

        <!-- Appearance -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/settings_appearance"
            android:textAppearance="@style/TextAppearance.SessionTracks.Overline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/themeInputLayout"
            style="@style/Widget.SessionTracks.TextInputLayout.Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:hint="@string/settings_theme">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/themeDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/languageInputLayout"
            style="@style/Widget.SessionTracks.TextInputLayout.Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:hint="@string/settings_language">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/languageDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bengaliNumeralsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:minHeight="@dimen/touch_target_min"
            android:text="@string/settings_bengali_numerals"
            android:textAppearance="@style/TextAppearance.SessionTracks.BodyLarge" />

        <!-- Notifications -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/settings_notifications"
            android:textAppearance="@style/TextAppearance.SessionTracks.Overline" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/remindersSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:minHeight="@dimen/touch_target_min"
            android:text="@string/settings_reminders_enabled"
            android:textAppearance="@style/TextAppearance.SessionTracks.BodyLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_reminders_desc"
            android:textAppearance="@style/TextAppearance.SessionTracks.Caption" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reminderLeadInputLayout"
            style="@style/Widget.SessionTracks.TextInputLayout.Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:hint="@string/settings_reminder_lead">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/reminderLeadDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Playback -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/settings_playback"
            android:textAppearance="@style/TextAppearance.SessionTracks.Overline" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/openInAppSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:minHeight="@dimen/touch_target_min"
            android:text="@string/settings_open_in_app"
            android:textAppearance="@style/TextAppearance.SessionTracks.BodyLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_open_in_app_desc"
            android:textAppearance="@style/TextAppearance.SessionTracks.Caption" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/autoCompleteSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:minHeight="@dimen/touch_target_min"
            android:text="@string/settings_autocomplete"
            android:textAppearance="@style/TextAppearance.SessionTracks.BodyLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_autocomplete_desc"
            android:textAppearance="@style/TextAppearance.SessionTracks.Caption" />

        <!-- Data -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/settings_data"
            android:textAppearance="@style/TextAppearance.SessionTracks.Overline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backupButton"
            style="@style/Widget.SessionTracks.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:text="@string/backup_title"
            app:icon="@drawable/ic_backup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restoreDefaultsButton"
            style="@style/Widget.SessionTracks.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:text="@string/settings_restore_defaults"
            app:icon="@drawable/ic_refresh" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAllButton"
            style="@style/Widget.SessionTracks.Button.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:text="@string/settings_reset_app"
            android:textColor="@color/md_error"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/md_error" />

        <TextView
            android:id="@+id/versionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.SessionTracks.Caption"
            tools:text="সংস্করণ 1.0.0" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
